sumo/tests/sumo/extended/vaporizer/errors/end_missing/errors.sumo
Error: Attribute 'end' is missing in definition of a(n) vaporizer.
Quitting (on error).
